net/openldap25-server: magus test issue

--- a/net/openldap25-server/Makefile
+++ b/net/openldap25-server/Makefile
@@ -233,6 +233,8 @@ OUTLOOK_EXTRA_PATCHES=		${FILESDIR}/extrapatch-outlook-servers__slapd__schema_pr
 
 CONFIGURE_SED=		-e 's,uuid/uuid.h,xxuuid/uuid.h,g'
 
+NO_TEST=	yes
+
 .include <bsd.mport.options.mk>
 
 .if defined(CLIENT_ONLY)
