--- a/net-p2p/Makefile
+++ b/net-p2p/Makefile
@@ -3,14 +3,12 @@ COMMENT = peer-to-peer network applications
 SUBDIR += ctorrent
 SUBDIR += frost
 SUBDIR += libtorrent
+SUBDIR += libutp
 SUBDIR += rtorrent
 SUBDIR += shx
 SUBDIR += transmission
-SUBDIR += transmission-cli
-SUBDIR += transmission-daemon
-SUBDIR += transmission-gtk
-SUBDIR += transmission-qt
-SUBDIR += transmission-utils
+SUBDIR += transmission-components
+SUBDIR += transmission-remote-gui
 SUBDIR += xbt
 
 .include <bsd.port.subdir.mk>
