--- a/net-p2p/transmission/Makefile
+++ b/net-p2p/transmission/Makefile
@@ -1,38 +1,33 @@
 PORTNAME=	transmission
-DISTVERSION=	3.00
-PORTREVISION=	2
+DISTVERSION=	4.0.6
+PORTREVISION=	0
 CATEGORIES=	net-p2p
-MASTER_SITES=	# empty
-DISTFILES=	# empty
-EXTRACT_ONLY=	# empty
 
 MAINTAINER=	ports@MidnightBSD.org
-COMMENT=	Meta-port for Transmission BitTorrent client
+COMMENT=	Transmission BitTorrent client
+WWW=		https://www.transmissionbt.com
 
-LICENSE=	gpl2 mit
-LICENSE_COMB=	multi
+LICENSE=	gpl3+
 
-OPTIONS_DEFINE=		CLI DAEMON GTK QT UTILS WEB
-OPTIONS_DEFAULT=	${OPTIONS_DEFINE}
+USES=		metaport
 
-CLI_DESC=		Command line version
-DAEMON_DESC=		Daemon version
-GTK_DESC=		GTK version
-QT_DESC=		Qt version
-UTILS_DESC=		Command line tools
-WEB_DESC=		Web client
+OPTIONS_DEFINE=		CLI DAEMON DOCS GTK QT UTILS WEB
+OPTIONS_DEFAULT=	CLI DAEMON GTK QT UTILS WEB
 
-CLI_RUN_DEPENDS=	transmission-cli:net-p2p/transmission-cli
-DAEMON_RUN_DEPENDS=	transmission-daemon:net-p2p/transmission-daemon
-GTK_RUN_DEPENDS=	transmission-gtk:net-p2p/transmission-gtk
-QT_RUN_DEPENDS=		transmission-qt:net-p2p/transmission-qt
-UTILS_RUN_DEPENDS=	transmission-create:net-p2p/transmission-utils
-WEB_RUN_DEPENDS=	${DATADIR}/web/index.html:www/transmission-web
+CLI_DESC=	Build command-line client (deprecated)
+DAEMON_DESC=	Build daemon
+DOCS_DESC=	Install documentation
+GTK_DESC=	Build GTK+ client
+QT_DESC=	Build QT client
+UTILS_DESC=	Build utilities (create, edit, remote, show)
+WEB_DESC=	Install web interface
 
-NO_BUILD=     yes
-
-do-install:
-	@${DO_NADA}
-
+CLI_RUN_DEPENDS=	transmission-cli:net-p2p/transmission-components@cli
+DAEMON_RUN_DEPENDS=	transmission-daemon:net-p2p/transmission-components@daemon
+DOCS_RUN_DEPENDS=	${DOCSDIR}/README.md:net-p2p/transmission-components@docs
+GTK_RUN_DEPENDS=	transmission-gtk:net-p2p/transmission-components@gtk
+QT_RUN_DEPENDS=		transmission-qt:net-p2p/transmission-components@qt
+UTILS_RUN_DEPENDS=	transmission-create:net-p2p/transmission-components@utils
+WEB_RUN_DEPENDS=	${DATADIR}/public_html/index.html:net-p2p/transmission-components@web
 
 .include <bsd.port.mk>
