--- a/lang/Makefile
+++ b/lang/Makefile
@@ -21,6 +21,9 @@ SUBDIR += execline
 SUBDIR += expect
 SUBDIR += fsharp
 SUBDIR += f2c
+SUBDIR += fpc
+SUBDIR += fpc-docs
+SUBDIR += fpc-source
 SUBDIR += gawk
 SUBDIR += gcc
 SUBDIR += gcc48
