add initial lazarus port

--- a/editors/Makefile
+++ b/editors/Makefile
@@ -11,6 +11,8 @@ SUBDIR += impress
 SUBDIR += jedit
 SUBDIR += joe
 SUBDIR += jupp
+SUBDIR += lazarus
+SUBDIR += lazarus-qt5
 SUBDIR += linux-openoffice3
 SUBDIR += linux-sublime
 SUBDIR += linux-sublime-text4
