--- a/x11-toolkits/Makefile
+++ b/x11-toolkits/Makefile
@@ -65,6 +65,7 @@ SUBDIR += qt5-quicktimeline
 SUBDIR += qt5-uiplugin
 SUBDIR += qt5-virtualkeyboard
 SUBDIR += qt5-widgets
+SUBDIR += qt5pas
 SUBDIR += qt6-charts
 SUBDIR += qt6-datavis3d
 SUBDIR += qt6-declarative
