Update default gcc version to 12. add libopencad, sumo, uranium, fox16

--- a/cad/Makefile
+++ b/cad/Makefile
@@ -2,6 +2,9 @@
 
     SUBDIR += cascade
     SUBDIR += gdsreader
+    SUBDIR += libopencad
+    SUBDIR += sumo
+    SUBDIR += uranium
     SUBDIR += veroroute
     SUBDIR += xcircuit
     SUBDIR += xyce
