--- a/mail/Makefile
+++ b/mail/Makefile
@@ -85,11 +85,14 @@ SUBDIR += p5-MIME-Tools
 SUBDIR += p5-MIME-Types
 SUBDIR += p5-Mail-AuthenticationResults
 SUBDIR += p5-Mail-DKIM
+SUBDIR += p5-Mail-DMARC
 SUBDIR += p5-Mail-DomainKeys
 SUBDIR += p5-Mail-SPF
 SUBDIR += p5-Mail-Sendmail
 SUBDIR += p5-Mail-Tools
+SUBDIR += p5-Net-IMAP-Simple
 SUBDIR += p5-Net-SMTP-SSL
+SUBDIR += p5-Net-SMTPS
 SUBDIR += panda-cclient
 SUBDIR += pantomime
 SUBDIR += php81-imap
