--- a/databases/Makefile
+++ b/databases/Makefile
@@ -62,6 +62,7 @@ SUBDIR += p5-DBD-mysql
 SUBDIR += p5-DBI
 SUBDIR += p5-DBIx-Class
 SUBDIR += p5-DBIx-ContextualFetch
+SUBDIR += p5-DBIx-Simple
 SUBDIR += p5-DBM-Deep
 SUBDIR += p5-Data-Page
 SUBDIR += p5-Ima-DBI
