--- a/www/Makefile
+++ b/www/Makefile
@@ -110,6 +110,7 @@ SUBDIR += p5-HTML-Tagset
 SUBDIR += p5-HTML-Template
 SUBDIR += p5-HTML-Tree
 SUBDIR += p5-HTTP-Body
+SUBDIR += p5-HTTP-CookieJar
 SUBDIR += p5-HTTP-Cookies
 SUBDIR += p5-HTTP-Daemon
 SUBDIR += p5-HTTP-Date
@@ -125,6 +126,7 @@ SUBDIR += p5-HTTP-Server-Simple
 SUBDIR += p5-HTTP-Server-Simple-PSGI
 SUBDIR += p5-HTTP-SimpleLinkChecker
 SUBDIR += p5-HTTP-Size
+SUBDIR += p5-HTTP-Tiny
 SUBDIR += p5-HTTP-Tiny-Multipart
 SUBDIR += p5-LWP-MediaTypes
 SUBDIR += p5-LWP-Online
