--- a/x11/xzoom/Makefile
+++ b/x11/xzoom/Makefile
@@ -1,21 +1,20 @@
-# Created by: Yukihiro Nakai <Nakai@Mlab.t.u-tokyo.ac.jp>
-
 PORTNAME=	xzoom
-PORTVERSION=	0.3
+PORTVERSION=	0.4
+PORTREVISION=	1
 CATEGORIES=	x11 accessibility
-MASTER_SITES=	SUNSITE/libs/X
+MASTER_SITES=	http://www.linklevel.net/distfiles/
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Magnify, rotate, mirror the image on the X screen
 
 LICENSE=	other
 
-USES=		imake tar:tgz xorg
+USES=		imake xorg
 USE_XORG=	x11 xext
-PLIST_FILES=	bin/xzoom man/man1/xzoom.1.gz
+PLIST_FILES=	bin/xzoom share/man/man1/xzoom.1.gz
 
 do-install:
 	${INSTALL_PROGRAM} ${WRKSRC}/xzoom ${STAGEDIR}${PREFIX}/bin
-	${INSTALL_MAN} ${WRKSRC}/xzoom.man ${STAGEDIR}${MAN1PREFIX}/man/man1/xzoom.1
+	${INSTALL_MAN} ${WRKSRC}/xzoom.man ${STAGEDIR}${PREFIX}/share/man/man1/xzoom.1
 
 .include <bsd.port.mk>
