--- a/x11/xxkb/Makefile
+++ b/x11/xxkb/Makefile
@@ -1,13 +1,13 @@
-# Created by: Alexander Matey <matey@cis.ohio-state.edu>
-
 PORTNAME=	xxkb
 PORTVERSION=	1.11.1
+PORTREVISION=	1
 CATEGORIES=	x11
 MASTER_SITES=	SF/${PORTNAME}/
 DISTNAME=	${PORTNAME}-${PORTVERSION}-src
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	XKB keyboard layout indicator and switcher
+WWW=		https://sourceforge.net/projects/xxkb/
 
 LICENSE=	artistic
 
@@ -20,7 +20,7 @@ PORTDOCS=	README CHANGES.ru README.ru
 OPTIONS_DEFINE=	LIBRSVG2 DOCS
 
 LIBRSVG2_USES=	gnome
-LIBRSVG2_USE=	GNOME=librsvg2
+LIBRSVG2_USE=	GNOME=librsvg2,gdkpixbuf2xlib
 LIBRSVG2_VARS=	XMKMF_ARGS=-DWITH_SVG_SUPPORT
 
 post-build:
@@ -28,6 +28,9 @@ post-build:
 .for f in CHANGES README
 	iconv -f koi8-r -t utf-8 ${WRKSRC}/${f}.koi8 > ${WRKSRC}/${f}.ru
 .endfor
+
+post-install:
+	${CP} ${PREFIX}/man/man1/* ${PREFIX}/share/man/man1/
 
 post-install-DOCS-on:
 	@${MKDIR} ${FAKE_DESTDIR}${DOCSDIR}
