--- a/devel/goffice/Makefile
+++ b/devel/goffice/Makefile
@@ -5,7 +5,7 @@ CATEGORIES=	devel gnome
 MASTER_SITES=	GNOME
 
 MAINTAINER=	ports@MidnightBSD.org
-COMMENT=	GLib/GTK+ set of document centric objects and utilities
+COMMENT=	GLib/GTK set of document centric objects and utilities
 WWW=		http://live.gnome.org/libgoffice
 
 LICENSE=	gpl2
@@ -27,7 +27,7 @@ CONFIGURE_ARGS=	--with-lasem=no --with-config-backend=gsettings \
 		--enable-compile-warnings=no \
 		--enable-introspection
 USE_PERL5=	build
-#SHEBANG_FILES=	${WRKSRC}/tools/introspection-identifier-filter
+SHEBANG_FILES=	${WRKSRC}/tools/introspection-identifier-filter
 
 PLIST_SUB=	VERSION=${PORTVERSION} SHORT_VER=${PORTVERSION:R} LIB_VER=${PORTVERSION:E}
 
