--- a/x11-fonts/p5-type1inst/Makefile
+++ b/x11-fonts/p5-type1inst/Makefile
@@ -1,5 +1,3 @@
-# Created by: giffunip@asme.org
-
 PORTNAME=	type1inst
 PORTVERSION=	0.6.1
 PORTREVISION=	7
@@ -12,11 +10,12 @@ COMMENT=	Script that helps install Postscript fonts in X Window System
 
 LICENSE=	gpl2
 
-USES=		perl5
+USES=		perl5 shebangfix
 NO_BUILD=	yes
 PORTDOCS=	README
 
-PLIST_FILES=	bin/t1embed bin/type1inst man/man1/type1inst.1.gz
+PLIST_FILES=	bin/t1embed bin/type1inst share/man/man1/type1inst.1.gz
+SHEBANG_FILES=	type1inst t1embed
 
 OPTIONS_DEFINE=	DOCS X11
 OPTIONS_DEFAULT=X11
@@ -27,7 +26,7 @@ do-install:
 	(cd ${WRKSRC} && ${INSTALL_SCRIPT} type1inst t1embed \
 		${STAGEDIR}${PREFIX}/bin)
 	${INSTALL_MAN} ${WRKSRC}/type1inst.man \
-		${STAGEDIR}${PREFIX}/man/man1/type1inst.1
+		${STAGEDIR}${PREFIX}/share/man/man1/type1inst.1
 
 	${MKDIR} ${STAGEDIR}${DOCSDIR}
 	${INSTALL_DATA} ${WRKSRC}/README ${STAGEDIR}${DOCSDIR}
