mail/p5-Email-Outlook-Message: man

--- a/mail/p5-Email-Outlook-Message/Makefile
+++ b/mail/p5-Email-Outlook-Message/Makefile
@@ -6,8 +6,9 @@ PKGNAMEPREFIX=	p5-
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Read e-mail messages stored as .msg files
+WWW=		https://metacpan.org/release/Email-Outlook-Message
 
-LICENSE=	artistic gpl
+LICENSE=	artistic gpl+
 LICENSE_COMB=	dual
 
 BUILD_DEPENDS=	${RUN_DEPENDS}
