--- a/databases/adodb5/Makefile
+++ b/databases/adodb5/Makefile
@@ -1,5 +1,5 @@
 PORTNAME=	adodb
-PORTVERSION=	5.22.6
+PORTVERSION=	5.22.7
 DISTVERSIONPREFIX=	v
 CATEGORIES=	databases www
 PKGNAMESUFFIX=	5${PHP_PKGNAMESUFFIX}
@@ -17,7 +17,7 @@ CPE_VENDOR=	${PORTNAME}_project
 USE_GITHUB=	yes
 GH_PROJECT=	ADOdb
 
-CONFLICTS=	adodb-4.*
+CONFLICTS_INSTALL=	adodb5-php[0-9][0-9]
 
 NO_BUILD=	yes
 NO_ARCH=	yes
