--- a/security/aide/Makefile
+++ b/security/aide/Makefile
@@ -1,5 +1,6 @@
 PORTNAME=	aide
-PORTVERSION=	0.18.2
+PORTVERSION=	0.18.6
+PORTREVISION=	1
 CATEGORIES=	security
 MASTER_SITES=	https://github.com/aide/aide/releases/download/v${PORTVERSION}/
 
@@ -10,17 +11,23 @@ WWW=		https://aide.github.io/
 LICENSE=	gpl2
 
 LIB_DEPENDS=	libmhash.so:security/mhash \
-		libgcrypt.so:security/libgcrypt \
-		libpcre2-8.so:devel/pcre2
+		libpcre2-8.so:devel/pcre2 \
+		libe2p.so:sysutils/e2fsprogs-core
 
-USES=		bison gmake localbase pkgconfig
+USES=		bison gmake localbase pkgconfig:build
 
 GNU_CONFIGURE=	yes
-CONFIGURE_ARGS+=--with-mhash=/usr/local/lib \
+GNU_CONFIGURE_MANPREFIX= ${PREFIX}/share
+CONFIGURE_ARGS+=--with-mhash \
 		--with-zlib \
-		--mandir=${PREFIX}/share/man \
+		--with-posix-acl \
+		--with-e2fsattrs \
 		--with-config_file=${PREFIX}/etc/aide.conf
-CONFIGURE_ENV=	YACC="bison -y"
+CONFIGURE_ENV=	YACC="bison -y" \
+		POSIX_ACL_CFLAGS="-I/usr/include/sys" \
+		POSIX_ACL_LIBS="-L/usr/lib" \
+		MHASH_CFLAGS="-I${LOCALBASE}/include" \
+		MHASH_LIBS="-L${LOCALBASE}/lib -lmhash"
 
 LDFLAGS+=	-lpthread
 
