--- a/x11/beforelight/Makefile
+++ b/x11/beforelight/Makefile
@@ -1,6 +1,5 @@
 PORTNAME=	beforelight
-PORTVERSION=	1.0.5
-PORTREVISION=	2
+PORTVERSION=	1.0.6
 CATEGORIES=	x11
 
 MAINTAINER=	ports@MidnightBSD.org
@@ -8,7 +7,7 @@ COMMENT=	Sample screen saver for X
 
 LICENSE=	mit
 
-USES=		xorg xorg-cat:app
+USES=		tar:xz xorg xorg-cat:app
 USE_XORG=	x11 xscrnsaver xt xaw7 xt
 
 .include <bsd.port.mk>
