--- a/security/botan2/Makefile
+++ b/security/botan2/Makefile
@@ -1,5 +1,5 @@
 PORTNAME=	botan
-DISTVERSION=	2.17.3
+DISTVERSION=	2.19.5
 CATEGORIES=	security
 MASTER_SITES=	http://botan.randombit.net/releases/
 PKGNAMESUFFIX=	2
@@ -7,6 +7,8 @@ DISTNAME=	Botan-${PORTVERSION}
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Portable, easy to use and efficient C++ crypto library
+WWW=		https://botan.randombit.net/
+WWW=		https://botan.randombit.net/
 
 LICENSE=	bsd2
 LICENSE_FILE=	${WRKSRC}/license.txt
@@ -15,14 +17,15 @@ BROKEN_armv6=	include/arm_neon.h:28:2: error: "NEON support not enabled"
 
 LIB_DEPENDS=	libboost_filesystem.so:devel/boost-libs
 
-USES=		compiler:c++11-lang gmake shebangfix tar:xz
+USES=		compiler:c++17-lang cpe gmake shebangfix tar:xz
+CPE_VENDOR=	${PORTNAME}_project
 USE_LDCONFIG=	yes
 
 SHEBANG_FILES=	configure.py src/python/botan2.py src/scripts/install.py
 
 HAS_CONFIGURE=		yes
 CONFIGURE_SCRIPT=	configure.py
-CONFIGURE_ARGS=		--cc=${COMPILER_TYPE} \
+CONFIGURE_ARGS=		--cc=${CHOSEN_COMPILER_TYPE} \
 			--prefix=${PREFIX:Q} \
 			--with-boost \
 			--with-bzip2 \
@@ -35,15 +38,33 @@ LDFLAGS+=		-pthread
 
 DOCSDIR=	${LOCALBASE}/share/doc/${PORTNAME}-${PORTVERSION}
 
-_SOABIVER=	17
+_SOABIVER=	19
 _SHLIBVER=	${DISTVERSION:S/./ /g:[2]}
 _SHLIBVERPATCH=	${DISTVERSION:S/./ /g:[3]}
-PLIST_SUB=	SOABIVER=${_SOABIVER} SHLIBVER=${_SHLIBVER} SHLIBVERPATCH=${_SHLIBVERPATCH}
+PLIST_SUB=	SHLIBVER=${_SHLIBVER} \
+		SHLIBVERPATCH=${_SHLIBVERPATCH} \
+		SOABIVER=${_SOABIVER}
 PORTDOCS=	*
 
-OPTIONS_DEFINE=		DOCS PYTHON SQLITE3 SSL
-OPTIONS_DEFAULT=	SSL
-OPTIONS_SUB=		yes
+OPTIONS_DEFINE=			DOCS MANPAGES PYTHON SQLITE3
+OPTIONS_DEFINE_aarch64=		OPENMP
+OPTIONS_DEFINE_amd64=		OPENMP
+OPTIONS_DEFINE_i386=		OPENMP
+OPTIONS_DEFINE_powerpc64=	OPENMP
+OPTIONS_DEFINE_powerpc64le=	OPENMP
+OPTIONS_DEFINE_riscv64=		OPENMP
+OPTIONS_DEFAULT=		MANPAGES
+OPTIONS_DEFAULT_aarch64=	OPENMP
+OPTIONS_DEFAULT_amd64=		OPENMP
+OPTIONS_DEFAULT_powerpc64=	OPENMP
+OPTIONS_DEFAULT_powerpc64le=	OPENMP
+OPTIONS_DEFAULT_riscv64=	OPENMP
+OPTIONS_SUB=			yes
+
+MANPAGES_BUILD_DEPENDS=		${PYTHON_PKGNAMEPREFIX}sphinx>=0:textproc/py-sphinx@${PY_FLAVOR}
+MANPAGES_CONFIGURE_WITH=	sphinx
+
+OPENMP_CONFIGURE_ON=	--with-openmp
 
 PYTHON_USES=		python
 PYTHON_USES_OFF=	python:build
@@ -53,16 +74,11 @@ PYTHON_CONFIGURE_OFF=	--no-install-python-module
 SQLITE3_USES=		sqlite
 SQLITE3_CONFIGURE_WITH=	sqlite3
 
-SSL_USES=		ssl
-SSL_CONFIGURE_WITH=	openssl
-
 .include <bsd.mport.options.mk>
 
 .if ${ARCH} == aarch64
 CONFIGURE_ARGS+=	--cc-abi="-march=armv8-a+crypto"
 .endif
-
-CONFIGURE_ARGS+=	--without-os-features=getentropy,elf_aux_info
 
 .if ${ARCH} == i386 || ${ARCH} == amd64
 PLIST_SUB+=	HAS_RDRAND_RNG=""
