--- a/devel/zziplib/Makefile
+++ b/devel/zziplib/Makefile
@@ -1,7 +1,6 @@
 PORTNAME=	zziplib
+PORTVERSION=	0.13.78
 DISTVERSIONPREFIX=	v
-PORTVERSION=	0.13.72
-PORTREVISION=	1
 CATEGORIES=	devel
 
 MAINTAINER=	ports@MidnightBSD.org
@@ -10,19 +9,24 @@ WWW=		https://github.com/gdraheim/zziplib
 
 LICENSE=	lgpl2.1 mpl
 LICENSE_COMB=	dual
+LICENSE_FILE_lgpl2.1=	${WRKSRC}/COPYING.LIB
+LICENSE_FILE_mpl=	${WRKSRC}/docs/COPYING.MPL
 
 BUILD_DEPENDS=	bash:shells/bash
 
-USES=		cmake compiler:c11 pathfix
+USES=		cmake compiler:c11 cpe pathfix
+
+CMAKE_OFF=	FORTIFY MSVC_STATIC_RUNTIME ZZIP_COMPAT ZZIP_LIBLATEST ZZIP_LIBTOOL
+CMAKE_ON=	BUILD_SHARED_LIBS ZZIP_PKGCONFIG ZZIPBINS ZZIPFSEEKO ZZIPMMAPPED ZZIPWRAP
+NO_TEST=	yes
+USE_LDCONFIG=	yes
+
+PLIST_SUB=	SHLIB_VER=${PORTVERSION:R:E}.0.${PORTVERSION:E}
+
+CPE_VENDOR=	zziplib_project
 
 USE_GITHUB=	yes
 GH_ACCOUNT=	gdraheim
-
-CMAKE_ON=	BUILD_SHARED_LIBS ZZIP_LIBTOOL ZZIP_PKGCONFIG ZZIPBINS ZZIPFSEEKO ZZIPMMAPPED ZZIPWRAP
-CMAKE_OFF=	BUILD_STATIC_LIBS
-#TEST_TARGET=	check
-NO_TEST=	yes
-USE_LDCONFIG=	yes
 
 PORTSCOUT=	limit:^0\.
 
@@ -30,7 +34,7 @@ OPTIONS_DEFINE=	MANPAGES SDL TEST
 OPTIONS_DEFAULT=MANPAGES
 OPTIONS_SUB=	yes
 
-MANPAGES_CMAKE_ARGS=  -DZZIP_HTMLSITE=OFF -DZZIP_HTMPAGES=OFF -DZZIP_MANPAGES=ON
+MANPAGES_CMAKE_ARGS=	-DZZIP_HTMLSITE=OFF -DZZIP_HTMPAGES=OFF -DZZIP_MANPAGES=ON
 MANPAGES_CMAKE_BOOL=	ZZIPDOCS
 MANPAGES_USES=		python:build shebangfix
 MANPAGES_VARS=		SHEBANG_GLOB=*.py
