--- a/lang/bsh/Makefile
+++ b/lang/bsh/Makefile
@@ -1,7 +1,5 @@
-# Created by: Kimura Fuyuki <fuyuki@mj.0038.net>
-
 PORTNAME=	bsh
-DISTVERSION=	2.1.0
+DISTVERSION=	2.1.1
 CATEGORIES=	lang java
 
 MAINTAINER=	ports@MidnightBSD.org
@@ -13,18 +11,17 @@ USE_GITHUB=	yes
 GH_ACCOUNT=	beanshell
 GH_PROJECT=	beanshell
 
-USE_JAVA=	yes
-JAVA_BUILD=	8
-
+USE_JAVA=	8
 USE_ANT=	yes
-ALL_TARGET=	jarall
 
 CONFLICTS_INSTALL=	schilyutils # bin/bsh
+
+ALL_TARGET=	jarall
 
 SUB_FILES=	${PORTNAME}.sh
 SUB_LIST=	JARNAME=${PORTNAME}.jar
 
-PLIST_FILES=	%%JAVAJARDIR%%/${PORTNAME}.jar \
+PLIST_FILES=	${JAVAJARDIR}/${PORTNAME}.jar \
 		bin/${PORTNAME}
 
 do-install:
