--- a/games/bsdgames/Makefile
+++ b/games/bsdgames/Makefile
@@ -1,5 +1,6 @@
 PORTNAME=	bsdgames
 PORTVERSION=	0.75
+PORTREVISION=	1
 DISTVERSIONPREFIX=	v
 PORTEPOCH=	2
 CATEGORIES=	games
@@ -16,7 +17,7 @@ FAKE_OPTS=	trueprefix
 USE_GITHUB=	yes
 GH_ACCOUNT=	pianojockl
 
-MAKE_ARGS=	BINGRP=${BINGRP}
+MAKE_ARGS=	BINGRP=${BINGRP} MANDIR="${PREFIX}/share/man/man"
 MAKE_ENV=	WITHOUT_WERROR=yes
 
 CFLAGS+=	-fcommon
@@ -42,7 +43,7 @@ post-install:
 # avoid conflict with games/bs and shells/fish
 .for prog in bs fish
 	${MV} ${STAGEDIR}${PREFIX}/bin/${prog} ${STAGEDIR}${PREFIX}/bin/${prog}-game
-	${MV} ${STAGEDIR}${MAN6PREFIX}/man/man6/${prog}.6.gz ${STAGEDIR}${MAN6PREFIX}/man/man6/${prog}-game.6.gz
+	${MV} ${STAGEDIR}${PREFIX}/share/man/man6/${prog}.6.gz ${STAGEDIR}${PREFIX}/share/man/man6/${prog}-game.6.gz
 .endfor
 
 	@${TOUCH} ${FAKE_DESTDIR}/var/games/atc_score
