--- a/math/cblas/Makefile
+++ b/math/cblas/Makefile
@@ -1,6 +1,6 @@
 PORTNAME=	cblas
 
-MAINTAINER=	fortran@FreeBSD.org
+MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Reference implementation of the C interface to the legacy Fortran BLAS
 WWW=		https://www.netlib.org/blas/blast-forum/
 
