--- a/security/openssl30/Makefile
+++ b/security/openssl30/Makefile
@@ -1,8 +1,7 @@
 PORTNAME=	openssl
-DISTVERSION=	3.0.9
+DISTVERSION=	3.0.13
 CATEGORIES=	security devel
-MASTER_SITES=	https://www.openssl.org/source/ \
-		ftp://ftp.cert.dfn.de/pub/tools/net/openssl/source/
+MASTER_SITES=	https://www.openssl.org/source/
 PKGNAMESUFFIX=	30
 
 MAINTAINER=	ports@MidnightBSD.org
