x11-fonts/proggy_fonts-ttf: www

--- a/x11-fonts/proggy_fonts-ttf/Makefile
+++ b/x11-fonts/proggy_fonts-ttf/Makefile
@@ -10,6 +10,7 @@ DIST_SUBDIR=	proggy_fonts-ttf
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	The perfect monospaced bitmap programming fonts, TTF version
+WWW=		http://upperbounds.net/
 
 LICENSE=	mit
 
