devel/py-twisted: test

--- a/devel/py-twisted/Makefile
+++ b/devel/py-twisted/Makefile
@@ -33,6 +33,7 @@ USE_PYTHON=	autoplist concurrent pep517
 CPE_VENDOR=	twistedmatrix
 
 NO_ARCH=	yes
+NO_TEST=	yes
 
 OPTIONS_DEFINE=	CONCH HTTP2 SERIAL TLS
 OPTIONS_DEFAULT=CONCH HTTP2 SERIAL TLS
