math/cblas: no test

--- a/math/cblas/Makefile
+++ b/math/cblas/Makefile
@@ -7,6 +7,8 @@ WWW=		https://www.netlib.org/blas/blast-forum/
 DESCR=	${.CURDIR}/pkg-descr
 CBLAS_SLAVEPORT=	yes
 
+NO_TEST=	yes
+
 MASTERDIR=	${.CURDIR}/../lapack
 
 .include "${MASTERDIR}/Makefile"
