--- a/ftp/curl/Makefile
+++ b/ftp/curl/Makefile
@@ -165,6 +165,7 @@ post-install:
 
 post-install-DOCS-on:
 	${MKDIR} ${FAKE_DESTDIR}${DOCSDIR}/ ${FAKE_DESTDIR}${DOCSDIR}/libcurl/
+	${INSTALL_DATA} ${WRKSRC}/docs/internals/*.md ${FAKE_DESTDIR}${DOCSDIR}/internals/
 	cd ${WRKSRC}/docs/ && ${INSTALL_DATA} FAQ INSTALL KNOWN_BUGS THANKS TODO options-in-versions *.md ${FAKE_DESTDIR}${DOCSDIR}/
 	cd ${WRKSRC}/docs/libcurl/ && ${INSTALL_DATA} ABI.md libcurl.m4 *.pl symbols-in-versions ${FAKE_DESTDIR}${DOCSDIR}/libcurl/
 
