--- a/ports-mgmt/Makefile
+++ b/ports-mgmt/Makefile
@@ -6,6 +6,7 @@ SUBDIR += magus-utils
 SUBDIR += modules2tuple
 SUBDIR += mport
 SUBDIR += mport-manager
+SUBDIR += portconfig
 SUBDIR += portfmt
 SUBDIR += portlint
 SUBDIR += portscout
