--- a/lang/php81/Makefile
+++ b/lang/php81/Makefile
@@ -1,5 +1,5 @@
 PORTNAME=	php81
-DISTVERSION=	8.1.28
+DISTVERSION=	8.1.29
 PORTREVISION?=	0
 CATEGORIES?=	lang devel www
 MASTER_SITES=	PHP/distributions
@@ -10,6 +10,9 @@ COMMENT=	PHP Scripting Language (8.1.X branch)
 WWW=		https://www.php.net/
 
 LICENSE=	PHP301
+
+DEPRECATED=	Upstream EOL reaches on 2025-12-31
+EXPIRATION_DATE=	2025-12-31
 
 USES+=		compiler:c11 cpe gnome pkgconfig tar:xz
 CPE_PRODUCT=	php
