--- a/x11-wm/blackbox/Makefile
+++ b/x11-wm/blackbox/Makefile
@@ -1,6 +1,6 @@
 PORTNAME=	blackbox
 PORTVERSION=	0.70.1
-PORTREVISION=	6
+PORTREVISION=	7
 CATEGORIES=	x11-wm
 MASTER_SITES=	SF/${PORTNAME}wm/${PORTNAME}wm/Blackbox%20${PORTVERSION}
 
@@ -12,6 +12,7 @@ LICENSE=	mit
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
 USES=		pathfix pkgconfig iconv xorg
+USE_CXXSTD=	c++14
 USE_XORG=	x11 xft
 
 GNU_CONFIGURE=	yes
