devel/p5-Parse-Yapp: www

--- a/devel/p5-Parse-Yapp/Makefile
+++ b/devel/p5-Parse-Yapp/Makefile
@@ -6,11 +6,13 @@ PKGNAMEPREFIX=	p5-
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Perl extension for generating and using LALR parsers
+WWW=		https://metacpan.org/release/Parse-Yapp
 
-LICENSE=	artistic gpl
+LICENSE=	artistic gpl+
 LICENSE_COMB=	dual
 
 USES=		perl5
 USE_PERL5=	configure
+NO_ARCH=	yes
 
 .include <bsd.port.mk>
