add fnt, chafa, typetools.

--- a/print/Makefile
+++ b/print/Makefile
@@ -92,6 +92,7 @@ SUBDIR += texlive-tlmgr
 SUBDIR += transfig
 SUBDIR += ttf2pt1
 SUBDIR += ttfautohint
+SUBDIR += typetools
 SUBDIR += xmbibtex
 SUBDIR += xpdfopen
 SUBDIR += xreader
