--- a/mail/procmail/Makefile
+++ b/mail/procmail/Makefile
@@ -9,6 +9,10 @@ WWW=		https://www.procmail.org/
 
 LICENSE=	gpl2
 
+.if defined(QEMU_EMULATING) && "${QEMU_EMULATING}" == "1"
+BROKEN=		fails to build under qemu: killing runaway build after 21600 seconds with no output
+.endif
+
 OPTIONS_DEFINE=	DOCS EXAMPLES
 
 USE_GITHUB=	yes
