--- a/www/tomcat-native/Makefile
+++ b/www/tomcat-native/Makefile
@@ -1,18 +1,17 @@
 PORTNAME=	tomcat-native
-PORTVERSION=	1.2.38
+DISTVERSION=	1.3.0
+PORTREVISION=	1
 CATEGORIES=	www java
 MASTER_SITES=	https://archive.apache.org/dist/tomcat/tomcat-connectors/native/${PORTVERSION}/source/
 DISTNAME=	${PORTNAME}-${PORTVERSION}-src
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Tomcat native library
-WWW=		https://tomcat.apache.org/native-1.2-doc/
+WWW=		https://tomcat.apache.org/native-${PORTVERSION:R}-doc/
 
 LICENSE=	apache2
 
 LIB_DEPENDS=	libapr-1.so:devel/apr1
-
-WRKSRC=		${WRKDIR}/${DISTNAME}/native
 
 USES=		libtool ssl
 USE_JAVA=	yes
@@ -22,12 +21,15 @@ CONFIGURE_ARGS=	--with-apr=${LOCALBASE} \
 		--with-java-home=${JAVA_HOME} \
 		--with-ssl=${OPENSSLBASE}
 
+WRKSRC=	${WRKDIR}/${DISTNAME}/native
+
+SOVERSION=	${PORTVERSION:S/^1.//1}
 PLIST_FILES=	lib/libtcnative-1.a \
 		lib/libtcnative-1.so \
 		lib/libtcnative-1.so.0 \
-		lib/libtcnative-1.so.0.2.38
+		lib/libtcnative-1.so.0.${SOVERSION}
 
 post-install:
-	${STRIP_CMD} ${STAGEDIR}${PREFIX}/lib/libtcnative-1.so.0.2.38
+	${STRIP_CMD} ${STAGEDIR}${PREFIX}/lib/libtcnative-1.so.0.${SOVERSION}
 
 .include <bsd.port.mk>
