--- a/www/Makefile
+++ b/www/Makefile
@@ -58,9 +58,11 @@ SUBDIR += midori
 SUBDIR += minio
 SUBDIR += minio-client
 SUBDIR += mod_dav_svn
+SUBDIR += mod_defensible
 SUBDIR += mod_dnssd
 SUBDIR += mod_evasive
 SUBDIR += mod_fastcgi
+SUBDIR += mod_http2
 SUBDIR += mod_perl2
 SUBDIR += mod_php81
 SUBDIR += mod_php82
