--- a/devel/p5-Capture-Tiny/Makefile
+++ b/devel/p5-Capture-Tiny/Makefile
@@ -1,7 +1,5 @@
-# Created by: Bill Brinzer <bill.brinzer@gmail.com>
-
 PORTNAME=	Capture-Tiny
-PORTVERSION=	0.46
+PORTVERSION=	0.48
 CATEGORIES=	devel perl5
 MASTER_SITES=	CPAN
 MASTER_SITE_SUBDIR=	CPAN:DAGOLDEN
@@ -9,6 +7,7 @@ PKGNAMEPREFIX=	p5-
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Capture STDOUT and STDERR from Perl, XS, or external programs
+ WWW=		https://metacpan.org/release/Capture-Tiny
 
 LICENSE=	apache2
 LICENSE_FILE=	${WRKSRC}/LICENSE
