--- a/databases/p5-DBD-mysql4/Makefile
+++ b/databases/p5-DBD-mysql4/Makefile
@@ -1,12 +1,13 @@
 PORTNAME=	DBD-mysql
-DISTVERSION=	5.008
+PORTVERSION=	4.052
 CATEGORIES=	databases perl5
 MASTER_SITES=	CPAN
 MASTER_SITE_SUBDIR=	CPAN:DVEEDEN
 PKGNAMEPREFIX=	p5-
+PKGNAMESUFFIX=	4
 
 MAINTAINER=	ports@MidnightBSD.org
-COMMENT?=	MySQL driver for the Perl5 Database Interface (DBI)
+COMMENT=	MySQL driver for the Perl5 Database Interface (DBI)
 WWW=		https://metacpan.org/release/DBD-mysql
 
 LICENSE=	artistic gpl+
@@ -15,25 +16,26 @@ LICENSE_FILE=	${WRKSRC}/LICENSE
 
 BUILD_DEPENDS=	${RUN_DEPENDS} \
 		p5-Devel-CheckLib>=1.09:devel/p5-Devel-CheckLib
-LIB_DEPENDS=	libunwind.so:devel/libunwind
 RUN_DEPENDS=	p5-DBI>=1.08:databases/p5-DBI
 TEST_DEPENDS=	p5-Test-Deep>=0:devel/p5-Test-Deep
 
-USES=		compiler:c11 mysql perl5 ssl
+USES=		compiler:c11 mysql perl5
 USE_PERL5=	configure
 
 CONFIGURE_ARGS=		${_CONFIGURE_ARGS_${CHOSEN_COMPILER_TYPE}}
 _CONFIGURE_ARGS_gcc=	--libs="-L${PREFIX}/lib/gcc${GCC_DEFAULT} `mysql_config --libs | ${SED} 's/-pthread //'`"
 
-CONFLICTS_INSTALL=	p5-DBD-mysql4
+CONFLICTS_INSTALL=	p5-DBD-mysql
+
+OPTIONS_DEFINE=		SSL
+OPTIONS_DEFAULT=	SSL
+
+SSL_RUN_DEPENDS=	p5-Crypt-SSLeay>=0:security/p5-Crypt-SSLeay
+SSL_USES=		ssl
+SSL_CONFIGURE_ON=	--ssl
+SSL_CONFIGURE_OFF=	--nossl
 
 post-install:
 	${STRIP_CMD} ${STAGEDIR}${PREFIX}/${SITE_ARCH_REL}/auto/DBD/mysql/mysql.so
 
-.include <bsd.port.pre.mk>
-
-.if ${MYSQL_FLAVOUR} != mysql
-IGNORE=	use databases/p5-DBD-mysql4 or databases/p5-DBD-MariaDB instead
-.endif
-
-.include <bsd.port.post.mk>
+.include <bsd.port.mk>
