--- a/mail/p5-Email-Send/Makefile
+++ b/mail/p5-Email-Send/Makefile
@@ -1,28 +1,30 @@
 PORTNAME=	Email-Send
-PORTVERSION=	2.201
+PORTVERSION=	2.202
 CATEGORIES=	mail perl5
 MASTER_SITES=	CPAN
 PKGNAMEPREFIX=	p5-
 
 MAINTAINER=	ports@MidnightBSD.org
-COMMENT=	Email::Send - Simply Sending Email
+COMMENT=	Perl module for simple email sending
+WWW=		https://metacpan.org/release/Email-Send
 
-LICENSE=        gpl2
+LICENSE=	artistic gpl+
+LICENSE_COMB=	dual
+LICENSE_FILE=	${WRKSRC}/LICENSE
 
-BUILD_DEPENDS=	p5-Class-Accessor>=0.19:${PORTSDIR}/devel/p5-Class-Accessor \
-		p5-Email-Address>=1.80:${PORTSDIR}/mail/p5-Email-Address \
-		p5-Email-Simple>=1.92:${PORTSDIR}/mail/p5-Email-Simple \
-		p5-Return-Value>=1.28:${PORTSDIR}/devel/p5-Return-Value \
-		${SITE_PERL}/UNIVERSAL/require.pm:${PORTSDIR}/devel/p5-UNIVERSAL-require \
-		p5-Net>0:${PORTSDIR}/net/p5-Net
-RUN_DEPENDS=	${BUILD_DEPENDS}
-TEST_DEPENDS=	p5-MIME-Tools>=0:mail/p5-MIME-Tools \
-		p5-Mail-Tools>=0:mail/p5-Mail-Tools
+DEPRECATED=	Send it's being officially marked "out of favor". Consider using mail/p5-Email-Sender for new projects
+
+BUILD_DEPENDS=	${RUN_DEPENDS}
+RUN_DEPENDS=	p5-Email-Abstract>=0:mail/p5-Email-Abstract \
+		p5-Email-Address>=1.800:mail/p5-Email-Address \
+		p5-Email-Simple>=1.92:mail/p5-Email-Simple \
+		p5-Module-Pluggable>=2.97:devel/p5-Module-Pluggable \
+		p5-Return-Value>=0:devel/p5-Return-Value
 
 USES=		perl5
 USE_PERL5=	configure
 
-NO_TEST=	yes
 NO_ARCH=	yes
+NO_TEST=	yes
 
 .include <bsd.port.mk>
