--- a/mail/p5-Email-Sender/Makefile
+++ b/mail/p5-Email-Sender/Makefile
@@ -1,6 +1,5 @@
 PORTNAME=	Email-Sender
-PORTVERSION=	1.300031
-PORTREVISION=	1
+DISTVERSION=	2.500
 CATEGORIES=	mail perl5
 MASTER_SITES=	CPAN
 MASTER_SITE_SUBDIR=	CPAN:RJBS
@@ -8,11 +7,14 @@ PKGNAMEPREFIX=	p5-
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Library for sending email
+WWW=		https://metacpan.org/release/Email-Sender
 
-LICENSE=	artistic gpl
+LICENSE=	artistic gpl+
 LICENSE_COMB=	dual
+LICENSE_FILE=	${WRKSRC}/LICENSE
 
-BUILD_DEPENDS=	p5-Email-Abstract>=3.006:mail/p5-Email-Abstract \
+BUILD_DEPENDS=	${RUN_DEPENDS}
+RUN_DEPENDS=	p5-Email-Abstract>=3.006:mail/p5-Email-Abstract \
 		p5-Email-Address>=0:mail/p5-Email-Address \
 		p5-Email-Simple>=1.998:mail/p5-Email-Simple \
 		p5-List-MoreUtils>=0:lang/p5-List-MoreUtils \
@@ -22,11 +24,11 @@ BUILD_DEPENDS=	p5-Email-Abstract>=3.006:mail/p5-Email-Abstract \
 		p5-Sub-Exporter>=0:devel/p5-Sub-Exporter \
 		p5-Throwable>=0.200003:devel/p5-Throwable \
 		p5-Try-Tiny>=0:lang/p5-Try-Tiny
-RUN_DEPENDS:=	${BUILD_DEPENDS}
 TEST_DEPENDS=	p5-Capture-Tiny>=0.08:devel/p5-Capture-Tiny
 
-NO_ARCH=	yes
 USES=		perl5
 USE_PERL5=	configure
+
+NO_ARCH=	yes
 
 .include <bsd.port.mk>
