mail/hashcash: man

--- a/mail/hashcash/Makefile
+++ b/mail/hashcash/Makefile
@@ -1,19 +1,12 @@
-# New ports collection makefile for:	hashcash
-# Date created:				Jan 30, 2003
-# Whom:					bremner@unb.ca
-#
-
-#
-
 PORTNAME=	hashcash
 PORTVERSION=	1.22
-PORTREVISION=	1
+PORTREVISION=	2
 CATEGORIES=	mail
 MASTER_SITES=	http://www.hashcash.org/source/
-EXTRACT_SUFX=	.tgz
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Anti-spam / denial of service counter-measure tool
+WWW=		http://www.hashcash.org/
 
 LICENSE=	CPL
 LICENSE_NAME=	CPL
@@ -23,8 +16,8 @@ LICENSE_PERMS=	dist-mirror dist-sell pkg-mirror pkg-sell auto-accept
 USES=		tar:tgz
 
 PLIST_FILES=	bin/hashcash bin/sha1
-PLIST_FILES+=	man/man1/hashcash.1.gz
-PLIST_FILES+=	man/man1/sha1-hashcash.1.gz
+PLIST_FILES+=	share/man/man1/hashcash.1.gz
+PLIST_FILES+=	share/man/man1/sha1-hashcash.1.gz
 
 PORTDOCS=	CHANGELOG LICENSE README
 ALL_TARGET=	generic
