archivers/p5-IO-Compress: 2.213

--- a/archivers/p5-IO-Compress/Makefile
+++ b/archivers/p5-IO-Compress/Makefile
@@ -1,5 +1,5 @@
 PORTNAME=	IO-Compress
-PORTVERSION=	2.207
+PORTVERSION=	2.213
 CATEGORIES=	archivers perl5
 MASTER_SITES=	CPAN
 PKGNAMEPREFIX=	p5-
@@ -8,7 +8,7 @@ MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Perl5 compression modules (bzip2, deflate, gzip, zlib, zip)
 WWW=		https://metacpan.org/release/IO-Compress
 
-LICENSE=	artistic gpl
+LICENSE=	artistic gpl+
 LICENSE_COMB=	dual
 
 BUILD_DEPENDS=	${RUN_DEPENDS}
