--- a/archivers/p5-IO-Zlib/Makefile
+++ b/archivers/p5-IO-Zlib/Makefile
@@ -1,6 +1,5 @@
 PORTNAME=	IO-Zlib
-PORTVERSION=	1.10
-PORTREVISION=	2
+PORTVERSION=	1.15
 CATEGORIES=	archivers perl5
 MASTER_SITES=	CPAN
 PKGNAMEPREFIX=	p5-
@@ -9,7 +8,7 @@ MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	IO:: style interface to Compress::Zlib
 WWW=		https://metacpan.org/release/IO-Zlib
 
-LICENSE=	artistic gpl
+LICENSE=	artistic gpl+
 LICENSE_COMB=	dual
 
 USES=		perl5
