--- a/mail/p5-Mail-Sendmail/Makefile
+++ b/mail/p5-Mail-Sendmail/Makefile
@@ -1,15 +1,14 @@
-
-
 PORTNAME=	Mail-Sendmail
-PORTVERSION=	0.79
+PORTVERSION=	0.80
 CATEGORIES=	mail perl5
 MASTER_SITES=	CPAN
 PKGNAMEPREFIX=	p5-
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Perl module implementing a simple, platform-independent mailer
+WWW=		https://metacpan.org/release/Mail-Sendmail
 
-LICENSE=	artistic gpl
+LICENSE=	artistic gpl+
 LICENSE_COMB=	dual
 
 USES=		perl5
