--- a/devel/p5-IPC-Run/Makefile
+++ b/devel/p5-IPC-Run/Makefile
@@ -1,5 +1,5 @@
 PORTNAME=	IPC-Run
-PORTVERSION=	20200505.0
+PORTVERSION=	20231003.0
 CATEGORIES=	devel perl5
 MASTER_SITES=	CPAN
 MASTER_SITE_SUBDIR=CPAN:TODDR
@@ -7,8 +7,9 @@ PKGNAMEPREFIX=	p5-
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Run subprocesses with piping and redirection
+WWW=		https://metacpan.org/release/IPC-Run
 
-LICENSE=	artistic gpl
+LICENSE=	artistic gpl+
 LICENSE_COMB=	dual
 LICENSE_FILE_ART10=	${WRKSRC}/LICENSE
 
