--- a/devel/p5-IPC-System-Simple/Makefile
+++ b/devel/p5-IPC-System-Simple/Makefile
@@ -1,13 +1,14 @@
 PORTNAME=	IPC-System-Simple
-PORTVERSION=	1.25
+PORTVERSION=	1.30
 CATEGORIES=	devel perl5
 MASTER_SITES=	CPAN
 PKGNAMEPREFIX=	p5-
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Perl extension to run commands simply with detailed diagnostics
+WWW=		https://metacpan.org/release/IPC-System-Simple
 
-LICENSE=	artistic gpl
+LICENSE=	artistic gpl+
 LICENSE_COMB=	dual
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
