--- a/devel/p5-Log-Any/Makefile
+++ b/devel/p5-Log-Any/Makefile
@@ -1,14 +1,14 @@
 PORTNAME=	Log-Any
-PORTVERSION=	1.707
+PORTVERSION=	1.717
 CATEGORIES=	devel perl5
 MASTER_SITES=	CPAN
-MASTER_SITE_SUBDIR=	CPAN:PREACTION
 PKGNAMEPREFIX=	p5-
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Perl extension to bring loggers and listeners together
+WWW=		https://metacpan.org/release/Log-Any
 
-LICENSE=	artistic gpl
+LICENSE=	artistic gpl+
 LICENSE_COMB=	dual
 
 CONFLICTS_INSTALL=	p5-Log-Any-Adapter-Syslog
