--- a/devel/p5-Long-Jump/Makefile
+++ b/devel/p5-Long-Jump/Makefile
@@ -1,5 +1,5 @@
 PORTNAME=	Long-Jump
-PORTVERSION=	0.000001
+PORTVERSION=	0.000003
 CATEGORIES=	devel perl5
 MASTER_SITES=	CPAN
 MASTER_SITE_SUBDIR=	CPAN:EXODIST
@@ -13,7 +13,9 @@ LICENSE=	artistic gpl+
 LICENSE_COMB=	dual
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
-TEST_DEPENDS=	p5-Test2-Suite>=0.000126:devel/p5-Test2-Suite
+BUILD_DEPENDS=	${RUN_DEPENDS}
+RUN_DEPENDS=	p5-Importer>=0:devel/p5-Importer
+TEST_DEPENDS=	p5-Test-Simple>=1.302200:devel/p5-Test-Simple
 
 USES=		perl5
 USE_PERL5=	configure
