--- a/devel/Makefile
+++ b/devel/Makefile
@@ -376,6 +376,7 @@ SUBDIR += p5-CPAN-Meta
 SUBDIR += p5-CPAN-Meta-Check
 SUBDIR += p5-CPAN-Meta-Requirements
 SUBDIR += p5-CPAN-Meta-YAML
+SUBDIR += p5-CPAN-Requirements-Dynamic
 SUBDIR += p5-Cache
 SUBDIR += p5-Cache-Cache
 SUBDIR += p5-Cairo-GObject
@@ -427,6 +428,7 @@ SUBDIR += p5-Context-Preserve
 SUBDIR += p5-Contextual-Return
 SUBDIR += p5-Curses
 SUBDIR += p5-Cwd-Guard
+SUBDIR += p5-Data-Binary
 SUBDIR += p5-Data-Compare
 SUBDIR += p5-Data-Dump
 SUBDIR += p5-Data-Dumper
@@ -619,6 +621,7 @@ SUBDIR += p5-Params-Util
 SUBDIR += p5-Params-Validate
 SUBDIR += p5-Params-ValidationCompiler
 SUBDIR += p5-Parse-CPAN-Meta
+SUBDIR += p5-Parse-Distname
 SUBDIR += p5-Parse-RecDescent
 SUBDIR += p5-Parse-Yapp
 SUBDIR += p5-PatchReader
@@ -626,6 +629,7 @@ SUBDIR += p5-Path-Class
 SUBDIR += p5-Path-Tiny
 SUBDIR += p5-PathTools
 SUBDIR += p5-Perl-OSType
+SUBDIR += p5-Perl-PrereqScanner-NotQuiteLite
 SUBDIR += p5-Perl-Tidy
 SUBDIR += p5-PerlIO-utf8_strict
 SUBDIR += p5-Pod-Coverage
@@ -637,6 +641,7 @@ SUBDIR += p5-ReadLine-Perl
 SUBDIR += p5-Readonly
 SUBDIR += p5-Ref-Util
 SUBDIR += p5-Ref-Util-XS
+SUBDIR += p5-Regexp-Trie
 SUBDIR += p5-Return-Value
 SUBDIR += p5-Role-Tiny
 SUBDIR += p5-SDL
