--- a/devel/p5-Module-Build-Tiny/Makefile
+++ b/devel/p5-Module-Build-Tiny/Makefile
@@ -1,6 +1,5 @@
 PORTNAME=	Module-Build-Tiny
-PORTVERSION=	0.039
-PORTREVISION=	2
+PORTVERSION=	0.051
 CATEGORIES=	devel perl5
 MASTER_SITES=	CPAN
 PKGNAMEPREFIX=	p5-
@@ -14,6 +13,7 @@ LICENSE_COMB=	dual
 
 BUILD_DEPENDS=	${RUN_DEPENDS}
 RUN_DEPENDS=	p5-ExtUtils-Config>=0.003:devel/p5-ExtUtils-Config \
+		p5-CPAN-Requirements-Dynamic>=0:devel/p5-CPAN-Requirements-Dynamic \
 		p5-ExtUtils-Helpers>=0.020:devel/p5-ExtUtils-Helpers \
 		p5-ExtUtils-InstallPaths>=0.002:devel/p5-ExtUtils-InstallPaths
 
